--- a/flyboard/static/css/flytheme.css
+++ b/flyboard/static/css/flytheme.css
@@ -1,5 +1,6 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 
 body {
@@ -38,7 +39,6 @@ center {
 }
 
 #topbar {
-    font-size: 12px;
     height: 16px;
     width: 100%;
     position: fixed;
@@ -148,6 +148,7 @@ center {
 
 #action-buttons {
     padding: 5px 0!important;
+    margin: 10px 0;
 }
 
 #action-buttons a {
@@ -159,4 +160,13 @@ center {
     color: red;
     font-weight: bold;
     font-size: 14px;
+}
+
+#post-info-box {
+    text-align: left;
+    margin-top: 10px;
+    font-size: 10px;
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
 }
